--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-                
+       
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -50,6 +50,22 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.38</version>
         </dependency> 
+        <!--
+       <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/ojdbc6.jar</systemPath>
+        </dependency>
+        -->
+
+<dependency>
+    <groupId>com.github.noraui</groupId>
+    <artifactId>ojdbc7</artifactId>
+    <version>12.1.0.2</version>
+</dependency>
+
     </dependencies>
 
     <build>
@@ -60,6 +76,13 @@
             </plugin>
         </plugins>
     </build>
+
+<repositories>
+    <repository>
+      <id>noraui</id>
+      <url>https://mvnrepository.com/artifact/com.github.noraui/ojdbc7</url>
+    </repository>
+ </repositories>
 
 
 </project>
