--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 server.port=9000
 # Mysql
-spring.datasource.url = jdbc:mysql://localhost:3306/mysql?zeroDateTimeBehavior=convertToNull
+#spring.datasource.url = jdbc:mysql://localhost:3306/mysql?zeroDateTimeBehavior=convertToNull
  
 #Oracle
-#spring.datasource.url = jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url = jdbc:oracle:thin:@localhost:1521:xe
  
 # Usuario y password para mysql
-spring.datasource.username = root
+spring.datasource.username = system
  
 #Para Wamp Server comentar el password, si es que no lo tiene 
-spring.datasource.password = root
+spring.datasource.password = system
  
 # Usuario y password para oracle
 #spring.datasource.username = system
@@ -31,4 +31,5 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
  
 # Asignando el dialecto de la abse de datos. en este caso es para MySQL
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
