--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9003
 spring.datasource.url = jdbc:mysql://localhost:3306/mysql?zeroDateTimeBehavior=convertToNull
  
 #Oracle
-#spring.datasource.url = jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url = jdbc:oracle:thin:@localhost:1521:xe
  
 # Usuario y password para mysql
 spring.datasource.username = root
